# nyt-2024-election-scraper

./: .gitignore  LICENSE  README.md  all-state-changes.csv  all-state-changes.html  all-state-changes.txt  all-state-changes.xml  battleground-state-changes.csv  battleground-state-changes.html  battleground-state-changes.txt  battleground-state-changes.xml  generate-state-changes  notification-updates.json  pyproject.toml  results.json  state-changes.html.tmpl
.github/workflows/: pr.yml  scrape.yml
